--- a/file.yml
+++ b/file.yml
@@ -4,7 +4,7 @@
   tasks:
   - name: Create multiple files
     file: 
-      path: "{{ item }}"
+      path: "/tmp/{{ item }}"
       state: touch
     with_items:
     - test01.txt
